--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
              Fantastic
         </title>
-        <link/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <header>
